test/negative/InterfaceStaticMethod.java
public interface InterfaceStaticMethod {
    public static f();
}
